Se agregan más titulos

--- a/Titulos.html
+++ b/Titulos.html
@@ -11,7 +11,10 @@
 <body>
     <h1>La Frontera de Posibilidades de Producción</h1>
     <h2>Definición</h2>
-    <h3>Primer caso: FPP lineal</h3>
+    <h3>Primer caso: Costo de oportunidad constante</h3>
     <h4>El costo de oportunidad</h4>
+    <h5>Ejemplo</h5>
+    <h3>Segundo caso: Costo de oportunidad creciente</h3>
+    <h4>Gráfica</h4>
 </body>
 </html>
